--- a/LogExpert/LogExpert.csproj
+++ b/LogExpert/LogExpert.csproj
@@ -1,4 +1,5 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="14.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -18,7 +19,7 @@
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
-    <OldToolsVersion>2.0</OldToolsVersion>
+    <OldToolsVersion>3.5</OldToolsVersion>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <ApplicationIcon>Resources\logexpert.ico</ApplicationIcon>
     <TargetZone>Custom</TargetZone>
@@ -97,6 +98,7 @@
     <Compile Include="CmdLine.cs" />
     <Compile Include="ColumnCache.cs" />
     <Compile Include="ColumnizerEventArgs.cs" />
+    <Compile Include="columnizers\GLogColumnizer.cs" />
     <Compile Include="ConfigChangedEventArgs.cs" />
     <Compile Include="ContextMenuPluginEventArgs.cs" />
     <Compile Include="CurrentHighlightGroupChangedEventArgs.cs" />
